<?xml version="1.0"?>
<package format="2">
  <name>hand_control</name>
  <version>1.1.0</version>
  <description>
	Controling a "Parrot AR Drone" with the hand movements measured by a Microsoft Kinect sensor.
  </description>
  <license>GPLv3+</license>

  <maintainer email="luc.absil@supelec.fr">Luc ABSIL</maintainer>
  <maintainer email="contact@lgdubois.fr">Louis-Guillaume DUBOIS</maintainer>
  <maintainer email="paul.janin@supelec.fr">Paul JANIN</maintainer>

  <author email="luc.absil@supelec.fr">Luc ABSIL</author>
  <author email="contact@lgdubois.fr">Louis-Guillaume DUBOIS</author>
  <author email="paul.janin@supelec.fr">Paul JANIN</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ardrone_autonomy</exec_depend>
  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
</package>
