<?xml version="1.0"?>
<package>
  <name>hand_control</name>
  <version>0.0.0</version>
  <description>Contrôle d’un drone "Parrot AR Drone" par les mouvements de la main mesurés par une Kinect</description>

  <maintainer email="luc.absil@supelec.fr">Luc ABSIL</maintainer>
  <maintainer email="contact@lgdubois.fr">Louis-Guillaume DUBOIS</maintainer>
  <maintainer email="paul.janin@supelec.fr">Paul JANIN</maintainer>

  <license>BSD</license>

  <url type="website">https://bitbucket.org/_Luc_/handcontrol</url>

  <author email="luc.absil@supelec.fr">Luc ABSIL</author>
  <author email="contact@lgdubois.fr">Louis-Guillaume DUBOIS</author>
  <author email="paul.janin@supelec.fr">Paul JANIN</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>freenect_camera</build_depend>
  <build_depend>freenect_launch</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversion</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>freenect_camera</run_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversion</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
